--- a/src/main/webapp/admin/institutions/department_management.xhtml
+++ b/src/main/webapp/admin/institutions/department_management.xhtml
@@ -14,122 +14,115 @@
             <h:form>
                 <p:growl />
                 <p:focus id="selectFocus" for="lstSelect" />
-                        <div class="row">
-                            <div class="col-md-6">
+                <p:panel header="Manage Departments">
+                    <div class="row">
+                        <div class="col-md-6">
 
-                                <p:commandButton id="btnAdd" value="Add New" action="#{departmentController.prepareAdd()}" class=" m-1 ui-button-success w-25"
-                                                 update="lstSelect gpDetail" process="btnAdd">
-                                </p:commandButton>
+                            <p:commandButton id="btnAdd" value="Add New" action="#{departmentController.prepareAdd()}" class=" m-1 ui-button-success w-25"
+                                             update="lstSelect gpDetail" process="btnAdd">
+                            </p:commandButton>
 
-                                <p:commandButton id="btnDelete" 
-                                                 onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                                                         return false;" 
-                                                 action="#{departmentController.delete()}"  
-                                                 value="Delete"
-                                                 update="lstSelect gpDetail" process="btnDelete"
-                                                 class=" m-1 ui-button-danger w-25"
-                                                 >
-                                </p:commandButton>
+                            <p:commandButton id="btnDelete" 
+                                             onclick="if (!confirm('Are you sure you want to delete this record?'))
+                                                             return false;" 
+                                             action="#{departmentController.delete()}"  
+                                             value="Delete"
+                                             update="lstSelect gpDetail" process="btnDelete"
+                                             class=" m-1 ui-button-danger w-25"
+                                             >
+                            </p:commandButton>
 
 <!--                                <p:inputText value="#{departmentController.selectText}" id="txtSearch" style="standardText" >
                                     <f:ajax event="keyup" execute="@this" render="lstSelect" listener="#{departmentController.fillSearchItems()}" ></f:ajax>
 
                                 </p:inputText>-->
 
-                                <p:selectOneListbox  id="lstSelect"
-                                                     value="#{departmentController.current}" 
-                                                     style="w-100"
-                                                     filter="true">
-                                    <f:selectItems  value="#{departmentController.searchItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
-                                    <p:ajax update="gpDetail" process="lstSelect" >
-                                    </p:ajax>
-                                </p:selectOneListbox>
+                            <p:selectOneListbox  id="lstSelect"
+                                                 value="#{departmentController.current}" 
+                                                 style="w-100"
+                                                 filter="true">
+                                <f:selectItems  value="#{departmentController.searchItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
+                                <p:ajax update="gpDetail" process="lstSelect" >
+                                </p:ajax>
+                            </p:selectOneListbox>
 
 
-                            </div>
-
-                            <div class="col-md-6">
-                                <p:panel>
-                                    
-                                    <f:facet name="header" >
-                                        <p:outputLabel value="Details of Selected Department" ></p:outputLabel>
-                                    </f:facet>
-
-                                    <f:facet name="footer" >
-                                        <p:commandButton id="btnSave" value="Save" action="#{departmentController.saveSelected()}" style="margin-left: 30px;" process="btnSave gpDetail" update="lstSelect gpDetail selectFocus" class=" m-1 ui-button-warning w-25">
-                                        </p:commandButton>
-                                        <p:defaultCommand target="btnSave"/>
-                                    </f:facet>
-
-                                    <p:tabView id="gpDetail" style="width: 400px">
-                                        <p:tab title="Basic Details" >
-                                            <h:panelGrid columns="1">
-                                                <h:panelGrid id="gpDetailText" columns="2">
-                                                    <h:outputText id="lblName" value="Name"  ></h:outputText>
-                                                    <p:inputText autocomplete="off" 
-                                                                 id="txtName" value="#{departmentController.current.name}" 
-                                                                 styleClass="longText" style="width: 450px"></p:inputText>
-                                                    <h:outputText id="lblTName" value="Code"  ></h:outputText>
-                                                    <p:inputText autocomplete="off" 
-                                                                 id="txtTName" value="#{departmentController.current.code}" 
-                                                                 styleClass="longText" style="width: 450px"></p:inputText>
-                                                    <h:outputText value="Code" />                                   
-                                                    <p:inputText autocomplete="off" style="width: 450px" value="#{departmentController.current.departmentCode}"  />
-
-                                                    <h:outputText  value="Printing Name" ></h:outputText>
-                                                    <p:inputText autocomplete="off" style="width: 450px" styleClass="longText"
-                                                                 value="#{departmentController.current.printingName}"  ></p:inputText>
-                                                    <h:outputText  value="Adress" ></h:outputText>
-                                                    <p:inputTextarea style="width: 450px" styleClass="longText" value="#{departmentController.current.address}"  ></p:inputTextarea>
-                                                    <h:outputText  value="Tel. No. 1" ></h:outputText>
-                                                    <p:inputText style="width: 450px" autocomplete="off"  value="#{departmentController.current.telephone1}"  ></p:inputText>
-                                                    <h:outputText  value="Tel. No. 2" ></h:outputText>
-                                                    <p:inputText style="width: 450px" autocomplete="off"  value="#{departmentController.current.telephone2}"  ></p:inputText>
-                                                    <h:outputText  value="Fax" ></h:outputText>
-                                                    <p:inputText style="width: 450px" autocomplete="off"  value="#{departmentController.current.fax}"  ></p:inputText>
-                                                    <h:outputText  value="Email" ></h:outputText>
-                                                    <p:inputText style="width: 450px" autocomplete="off"  value="#{departmentController.current.email}"  ></p:inputText>
-                                                    <h:outputText id="lblDept" value="Department Type" ></h:outputText>
-<!--                                                    <h:outputText id="lblDeptTem" value="Department Type" rendered="#{departmentController.current eq null}" ></h:outputText>-->
-                                                    <p:selectOneMenu style="width: 450px" id="cmbDept" value="#{departmentController.departmentType}">
-                                                        <f:selectItem itemLabel="Select the Department Type" />
-                                                        <f:selectItems value="#{departmentController.departmentType}"/>                                        
-                                                    </p:selectOneMenu>
-
-                                                    <h:outputText id="lblIns" value="Institution" ></h:outputText>
-                                                    <p:autoComplete  style="width: 450px" completeMethod="#{institutionController.completeCompany}" 
-                                                                     var="pta" itemLabel="#{pta.name}" itemValue="#{pta}" forceSelection="true" value="#{departmentController.current.institution}" ></p:autoComplete>
-
-
-                                                </h:panelGrid>
-
-
-                                            </h:panelGrid>
-                                        </p:tab>
-                                        <p:tab title="Pricing Details">
-                                            <h:panelGrid columns="2" >
-                                                <h:outputText value="OPD Margin Percenttage " />                                   
-                                                <p:inputText style="width: 450px" autocomplete="off"  value="#{departmentController.current.margin}"  />
-                                                <h:outputText style="width: 450px" value="Pharmacy Margin Percentage " />                                   
-                                                <p:inputText style="width: 450px" autocomplete="off"  value="#{departmentController.current.pharmacyMarginFromPurchaseRate}"  />
-
-                                            </h:panelGrid>
-                                        </p:tab>
-                                        <p:tab title="Editing Details" >
-                                            <h:panelGrid columns="2" >
-                                                <h:outputText id="lblcre" value="Creater" ></h:outputText>
-                                                <p:outputLabel value="#{institutionController.current.creater.webUserPerson.name}"/>
-
-                                            </h:panelGrid>
-                                        </p:tab>
-                                    </p:tabView>
-
-
-                                </p:panel>
-                            </div>
                         </div>
 
-              
+                        <div class="col-md-6">
+                            <p:panel class="w-100" header="Details of Selected Department">
+
+                                <p:tabView id="gpDetail" class="w-100">
+                                    <p:tab title="Basic Details" class="w-100" >
+                                        <h:panelGrid columns="1" class="w-100">
+                                            <h:panelGrid id="gpDetailText" columns="2">
+                                                <h:outputText id="lblName" value="Name"  ></h:outputText>
+                                                <p:inputText autocomplete="off" 
+                                                             id="txtName" value="#{departmentController.current.name}" 
+                                                              class="w-100"></p:inputText>
+                                                <h:outputText id="lblTName" value="Code"  ></h:outputText>
+                                                <p:inputText autocomplete="off" 
+                                                             id="txtTName" value="#{departmentController.current.code}" 
+                                                              class="w-100"></p:inputText>
+<!--                                                <h:outputText value="Code" />                                   
+                                                <p:inputText autocomplete="off" class="w-100" value="#{departmentController.current.departmentCode}"  />-->
+
+                                                <h:outputText  value="Printing Name" ></h:outputText>
+                                                <p:inputText autocomplete="off" class="w-100"
+                                                             value="#{departmentController.current.printingName}"  ></p:inputText>
+                                                <h:outputText  value="Address" ></h:outputText>
+                                                <p:inputTextarea class="w-100"  value="#{departmentController.current.address}"  ></p:inputTextarea>
+                                                <h:outputText  value="Tel. No. 1" ></h:outputText>
+                                                <p:inputText class="w-100" autocomplete="off"  value="#{departmentController.current.telephone1}"  ></p:inputText>
+                                                <h:outputText  value="Tel. No. 2" ></h:outputText>
+                                                <p:inputText class="w-100" autocomplete="off"  value="#{departmentController.current.telephone2}"  ></p:inputText>
+                                                <h:outputText  value="Fax" ></h:outputText>
+                                                <p:inputText class="w-100" autocomplete="off"  value="#{departmentController.current.fax}"  ></p:inputText>
+                                                <h:outputText  value="Email" ></h:outputText>
+                                                <p:inputText class="w-100" autocomplete="off"  value="#{departmentController.current.email}"  ></p:inputText>
+                                                <h:outputText id="lblDept" value="Department Type" ></h:outputText>
+<!--                                                    <h:outputText id="lblDeptTem" value="Department Type" rendered="#{departmentController.current eq null}" ></h:outputText>-->
+                                                <p:selectOneMenu class="w-100" id="cmbDept" value="#{departmentController.departmentType}">
+                                                    <f:selectItem itemLabel="Select the Department Type" />
+                                                    <f:selectItems value="#{departmentController.departmentType}"/>                                        
+                                                </p:selectOneMenu>
+
+                                                <h:outputText id="lblIns" value="Institution" ></h:outputText>
+                                                <p:autoComplete  class="w-100" completeMethod="#{institutionController.completeCompany}" 
+                                                                 var="pta" itemLabel="#{pta.name}" itemValue="#{pta}" forceSelection="true" value="#{departmentController.current.institution}" ></p:autoComplete>
+
+
+                                            </h:panelGrid>
+
+
+                                        </h:panelGrid>
+                                    </p:tab>
+                                    <p:tab title="Pricing Details">
+                                        <h:panelGrid columns="2" >
+                                            <h:outputText value="OPD Margin Percenttage " />                                   
+                                            <p:inputText class="w-100" autocomplete="off"  value="#{departmentController.current.margin}"  />
+                                            <h:outputText class="w-100" value="Pharmacy Margin Percentage " />                                   
+                                            <p:inputText class="w-100" autocomplete="off"  value="#{departmentController.current.pharmacyMarginFromPurchaseRate}"  />
+
+                                        </h:panelGrid>
+                                    </p:tab>
+                                    <p:tab title="Editing Details" >
+                                        <h:panelGrid columns="2" >
+                                            <h:outputText id="lblcre" value="Creater" ></h:outputText>
+                                            <p:outputLabel value="#{institutionController.current.creater.webUserPerson.name}"/>
+
+                                        </h:panelGrid>
+                                    </p:tab>
+                                </p:tabView>
+
+                                <p:commandButton id="btnSave" value="Save" action="#{departmentController.saveSelected()}" style="margin-left: 30px;" process="btnSave gpDetail" update="lstSelect gpDetail selectFocus" class=" m-1 ui-button-warning w-25">
+                                    </p:commandButton>
+                                    <p:defaultCommand target="btnSave"/>
+                            </p:panel>
+                        </div>
+                    </div>
+                </p:panel>
+
             </h:form>
 
         </h:panelGroup>
