closes #1833 Signed-off-by: Thiwanka Madushan <76912747+Thiwanka570@users.noreply.github.com>

--- a/src/main/webapp/resources/bill/newPatient.xhtml
+++ b/src/main/webapp/resources/bill/newPatient.xhtml
@@ -28,7 +28,7 @@
                 <f:selectItems value="#{cc.attrs.controller.sex}"/>
             </p:selectOneMenu>
             <h:outputLabel value="Age"/>
-            <h:panelGroup>
+            <h:panelGroup class="d-flex">
                 <p:inputText autocomplete="off"  id="year" value="#{cc.attrs.controller.yearMonthDay.year}">
                     <f:ajax event="keyup" execute="@this month day" render="calNewPtDob" listener="#{cc.attrs.controller.dateChangeListen()}"  />
                 </p:inputText>
