--- a/src/main/webapp/admin/items/inward_service.xhtml
+++ b/src/main/webapp/admin/items/inward_service.xhtml
@@ -57,8 +57,7 @@
                                                         var="myItem" itemValue="#{myItem}" 
                                                         itemLabel="#{myItem.name}" >
                                                     </f:selectItems>
-                                                    <p:ajax update="gpDetail" process="lstSelect">
-                                                    </p:ajax>
+                                                    <f:ajax render="gpDetail" execute="lstSelect" />
                                                 </p:selectOneListbox>
                                             </div>
                                         </div>
