--- a/src/main/webapp/admin/items/opd_service.xhtml
+++ b/src/main/webapp/admin/items/opd_service.xhtml
@@ -11,50 +11,69 @@
         <h:panelGroup >
             <h:form id="form"  >
                 <p:growl />
+                <p:focus id="selectFocus" for="lstSelect" />
+                <p:focus id="detailFocus" for="gpDetail" />
+
                 <p:panel header="Manage OPD Services" >
                     <div class="row">
                         <div class="col-md-4">
-                            <h:panelGrid id="gpSelectButtons" columns="3"  >
-                                <h:commandButton 
-                                    id="btnAdd" 
-                                    value="Add" 
-                                    class="btn-success"
-                                    action="#{serviceController.prepareAdd()}" >
-                                    <f:ajax render="btnAdd  btnDelete btnSave lstSelect gpDetail " execute="" >
-                                    </f:ajax>
-                                </h:commandButton>
-                                <h:commandButton 
-                                    id="btnDelete" 
-                                    class="btn-danger"
-                                    onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                                return false;" action="#{serviceController.delete()}"  
-                                    value="Delete" >
-                                </h:commandButton>
-                            </h:panelGrid>
-                            <h:panelGrid id="gpSelectText" class="w-100">
-                                <p:inputText autocomplete="off" id="txtSearch" value="#{serviceController.selectText}"  style="width: 320px;">
-                                    <f:ajax execute="txtSearch" render="lstSelect" event="keyup" />
-                                </p:inputText>
-                                <p:selectOneListbox  scrollHeight="500" class="w-100"  id="lstSelect"   value="#{serviceController.current}" style="min-width: 320px; ">
-                                    <f:selectItems  value="#{serviceController.selectedItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" >
-                                    </f:selectItems>
-                                    <p:ajax event="change"   update="gpDetail btnDelete" process="lstSelect" >
-                                    </p:ajax>
-                                </p:selectOneListbox>
-                            </h:panelGrid>
+                            <p:panel>
+                                <div class="container">
+                                    <div class="row" >
+                                        <div class="col-12" >
+                                            <p:commandButton 
+                                                id="btnAdd"
+                                                value="Add"
+                                                class="w-25 m-1 ui-button-success"
+                                                update="lstSelect gpDetail detailFocus" 
+                                                process="btnAdd" 
+                                                action="#{serviceController.prepareAdd()}" >
+                                            </p:commandButton>
+                                            <p:commandButton 
+                                                id="btnDelete" 
+                                                class="w-25 m-1 ui-button-danger"
+                                                onclick="if (!confirm('Are you sure you want to delete this record?'))
+                                                            return false;" 
+                                                action="#{serviceController.delete()}"
+                                                value="Delete"
+                                                update="lstSelect gpDetail selectFocus"
+                                                process="btnDelete">
+                                            </p:commandButton>
+                                        </div>
+                                    </div>
 
-
-
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <p:selectOneListbox  
+                                                id="lstSelect"   
+                                                value="#{serviceController.current}" 
+                                                filter="true"
+                                                class="form-control h-100">
+                                                <f:selectItems  value="#{serviceController.selectedItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" >
+                                                </f:selectItems>
+                                                <f:ajax render="gpDetail" execute="lstSelect" >
+                                                </f:ajax>
+                                            </p:selectOneListbox>
+                                        </div>
+                                    </div>
+                                </div>
+                            </p:panel>
                         </div>
 
+
                         <div class="col-md-8">
-                            <p:panel header="Edit Details" class="w-100">
+                            <p:panel  class="w-100">
                                 <f:facet name="header" >
                                     <h:outputLabel value="Active" rendered="#{!serviceController.current.inactive}" style="color: green;"></h:outputLabel>
                                     <h:outputLabel value="Inactive" rendered="#{serviceController.current.inactive}" style="color: red;"></h:outputLabel>
-                                    <p:commandButton style="float:right;" id="btnSave" value="Save" 
-                                                     action="#{serviceController.saveSelected()}" 
-                                                     ajax="false" >
+                                    <p:commandButton 
+                                        style="float: right"
+                                        class="ui-button-warning"
+                                        update="lstSelect selectFocus"
+                                        process="btnSave gpDetail" 
+                                        id="btnSave" 
+                                        value="Save"          
+                                        action="#{serviceController.saveSelected()}">
                                     </p:commandButton>
                                     <p:defaultCommand target="btnSave"/>
                                 </f:facet>
