--- a/src/main/webapp/admin/items/inward_service.xhtml
+++ b/src/main/webapp/admin/items/inward_service.xhtml
@@ -57,7 +57,7 @@
                                                         var="myItem" itemValue="#{myItem}" 
                                                         itemLabel="#{myItem.name}" >
                                                     </f:selectItems>
-                                                    <f:ajax render="gpDetail" execute="lstSelect" />
+                                                    <p:ajax update="gpDetail" process="lstSelect" />
                                                 </p:selectOneListbox>
                                             </div>
                                         </div>
@@ -84,15 +84,6 @@
                                 </f:facet>
                                 <h:panelGrid id="gpDetail" columns="1">
                                     <h:panelGrid id="gpDetailText" columns="2">
-                                        <p:calendar   value="#{inwardServiceController.current.createdAt}" 
-                                                      pattern="#{sessionController.applicationPreference.longTimeFormat}"
-                                                      />
-                                        <p:calendar   
-                                            value="#{inwardServiceController.current.createdAt}" 
-                                            pattern="#{sessionController.applicationPreference.longDateFormat}"
-                                            />
-
-
                                         <h:outputText id="lblName" value="Name" ></h:outputText>
                                         <h:inputText autocomplete="off" id="txtName" value="#{inwardServiceController.current.name}" required="true" class="form-control"></h:inputText>
                                         <h:outputText id="lblAddress" value="Printing Name" ></h:outputText>
@@ -105,8 +96,11 @@
                                         <h:outputText value="Service Category/Sub Category" ></h:outputText>
                                         <p:autoComplete 
                                             completeMethod="#{categoryController.completeServiceCategory}" 
-                                            var="pta" itemLabel="#{pta.name} #{pta.parentCategory}" itemValue="#{pta}" 
-                                            forceSelection="true" value="#{inwardServiceController.current.category}" >                                    
+                                            var="pta" 
+                                            itemLabel="#{pta.name}" 
+                                            itemValue="#{pta}" 
+                                            forceSelection="true" 
+                                            value="#{inwardServiceController.current.category}" >                                    
                                             <p:column>#{pta.name}</p:column>
                                             <p:column>#{pta.parentCategory}</p:column>                                        
                                         </p:autoComplete>
@@ -122,7 +116,17 @@
                                         <p:selectBooleanCheckbox  id="chkReportedAs" value="#{inwardServiceController.reportedAs}" itemLabel="Reported as a seperate investigation" >
                                             <p:ajax event="change" process="@this" update="reportedAsIx" />
                                         </p:selectBooleanCheckbox>
-                                        <p:autoComplete  disabled="#{!inwardServiceController.reportedAs}" widgetVar="aIx2" id="reportedAsIx" forceSelection="true" value="#{inwardServiceController.current.reportedAs}" completeMethod="#{inwardServiceController.completeItem}" var="ix2" itemLabel="#{ix2.name}" itemValue="#{ix2}" size="30"  >
+                                        <p:autoComplete  
+                                            disabled="#{!inwardServiceController.reportedAs}" 
+                                            widgetVar="aIx2" 
+                                            id="reportedAsIx" 
+                                            forceSelection="true" 
+                                            value="#{inwardServiceController.current.reportedAs}" 
+                                            completeMethod="#{inwardServiceController.completeItem}" 
+                                            var="ix2" 
+                                            itemLabel="#{ix2.name}" 
+                                            itemValue="#{ix2}" 
+                                            size="30"  >
                                         </p:autoComplete>
 
                                         <h:outputText value="Institution" ></h:outputText>
