Closes Issue#1852 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/resources/ezcomp/select_department.xhtml
+++ b/src/main/webapp/resources/ezcomp/select_department.xhtml
@@ -11,13 +11,13 @@
     </cc:interface>
 
     <!-- IMPLEMENTATION -->
-    <cc:implementation>
-        <div class="d-flex justify-content-center align-items-center mt-5">
+    <cc:implementation class="w-100">
+        <div class="d-flex justify-content-center align-items-center w-100" style="background-color: rgba(211, 211, 211,0.7); height: 100vh;">
 
             <h:form id="formDept" class="my-5 p-4">
 
 
-                <div class="card shadow-lg p-5 " style="width: 350px">
+                <div class="card shadow-lg p-5 w-100" style="background-color: rgba(255, 255, 255, 0.9);">
 
                     <div class="text-black text-center" style="font-size: 16pt;font-weight: bolder" >
                         <div class=" w-100 d-flex justify-content-center align-items-center my-2">
