Signed-off-by: Thiwanka Madushan <76912747+Thiwanka570@users.noreply.github.com>

--- a/src/main/webapp/emr/patient_search.xhtml
+++ b/src/main/webapp/emr/patient_search.xhtml
@@ -64,8 +64,10 @@
                             </div>
                             <div class="col-md-9">
                                 <div class="mb-3">
-                                    <p:commandButton value="New" styleClass="btn btn-warning"
-                                                     action="#{patientController.toAddNewPatient()}" />
+                                    <p:commandButton 
+                                        value="New"
+                                        styleClass="btn btn-warning"
+                                        action="#{patientController.toAddNewPatient()}" />
                                     <p:commandButton 
                                         value="Search" 
                                         id="btnSearch" 
