--- a/src/main/webapp/inward/inward_bill_service.xhtml
+++ b/src/main/webapp/inward/inward_bill_service.xhtml
@@ -262,8 +262,7 @@
                                                             <p:commandButton
                                                                 id="btnAddIx" 
                                                                 ajax="false" 
-                                                                
-                                                                class="w-100 ui-button-success" 
+                                                                class="w-100 mt-2 ui-button-success" 
                                                                 value="Add" 
                                                                 action="#{billBhtController.addToBill()}" />
                                                         </div>
