--- a/src/main/webapp/resources/paymentMethod/cheque.xhtml
+++ b/src/main/webapp/resources/paymentMethod/cheque.xhtml
@@ -14,21 +14,21 @@
 
     <!-- IMPLEMENTATION -->
     <cc:implementation>
-        <div class="d-flex ">
-            <h:panelGroup rendered="#{cc.attrs.valueRequired}" class="col mx-1" layout="block"  >
+        <div class="d-flex mt-1">
+            <h:panelGroup rendered="#{cc.attrs.valueRequired}" class="col mx-2" layout="block"  >
                 <p:inputText autocomplete="off"   value="#{cc.attrs.paymentMethodData.creditCard.totalValue}"  id="txtVal">
                     <p:ajax process="@this" ></p:ajax>
                 </p:inputText>
                 <p:watermark value="Value" for="txtVal" />
             </h:panelGroup>
             
-            <div class="col mx-1" >
+            <div class="col" >
                 <p:inputText autocomplete="off"  value="#{cc.attrs.paymentMethodData.cheque.no}" id="chequNo">
                     <p:ajax process="@this" ></p:ajax>
                 </p:inputText>
             </div>
             
-            <div class="col mx-1" >
+            <div class="col mx-2" >
                 <p:selectOneMenu  value="#{cc.attrs.paymentMethodData.cheque.institution}" >
                     <f:selectItem itemLabel="Select Bank"/>
                     <f:selectItems value="#{institutionController.banks}" var="inst" itemLabel="#{inst.name}" itemValue="#{inst}"/>
