--- a/src/main/webapp/resources/paymentMethod/creditCard.xhtml
+++ b/src/main/webapp/resources/paymentMethod/creditCard.xhtml
@@ -14,7 +14,7 @@
 
     <!-- IMPLEMENTATION -->
     <cc:implementation>
-        <div class="col d-flex flex-wrap align-items-center" >
+        <div class="col d-flex flex-wrap align-items-center mt-1" >
             <h:panelGroup rendered="#{cc.attrs.valueRequired}" class="mx-1" >
                 <p:inputText autocomplete="off"   value="#{cc.attrs.paymentMethodData.creditCard.totalValue}"  id="txtVal"/>
                 <p:watermark value="Value" for="txtVal" />
@@ -22,7 +22,7 @@
             <p:inputText class="mx-1" 
                 autocomplete="off"   
                 value="#{cc.attrs.paymentMethodData.creditCard.no}" id="refno"/>                                
-            <p:selectOneMenu value="#{cc.attrs.paymentMethodData.creditCard.institution}" class="mx-1" >
+            <p:selectOneMenu value="#{cc.attrs.paymentMethodData.creditCard.institution}" class="mx-2" >
                 <f:selectItem itemLabel="Select Bank"/>
                 <f:selectItems value="#{institutionController.banks}" var="inst" itemLabel="#{inst.name}" itemValue="#{inst}"/>
             </p:selectOneMenu>
