--- a/src/main/webapp/resources/paymentMethod/slip.xhtml
+++ b/src/main/webapp/resources/paymentMethod/slip.xhtml
@@ -14,23 +14,23 @@
 
     <!-- IMPLEMENTATION -->
     <cc:implementation>
-        <div class="d-flex flex-wrap align-items-center">
+        <div class="d-flex flex-wrap align-items-center mt-1">
 
-            <h:panelGroup rendered="#{cc.attrs.valueRequired}" class="col mx-1" layout="block" >
+            <h:panelGroup rendered="#{cc.attrs.valueRequired}" class="col " layout="block" >
                 <p:inputText autocomplete="off"   value="#{cc.attrs.paymentMethodData.creditCard.totalValue}"  id="txtVal">
                     <p:ajax process="@this" ></p:ajax>
                 </p:inputText>
                 <p:watermark value="Value" for="txtVal" />
             </h:panelGroup>
 
-            <div class="col mx-1"  >
+            <div class="col "  >
                 <div class="d-flex align-items-center">
-                    <p:selectOneMenu value="#{cc.attrs.paymentMethodData.slip.institution}" class="mx-1">
+                    <p:selectOneMenu value="#{cc.attrs.paymentMethodData.slip.institution}" class="mx-2">
                         <f:selectItem itemLabel="Select Bank"/>
                         <f:selectItems value="#{institutionController.banks}" var="inst" itemLabel="#{inst.name}" itemValue="#{inst}"/>
                         <p:ajax process="@this" ></p:ajax>
                     </p:selectOneMenu>
-                    <p:calendar class="mx-1" value="#{cc.attrs.paymentMethodData.slip.date}" pattern="#{sessionController.applicationPreference.longDateFormat}" id="date">                            
+                    <p:calendar class="" value="#{cc.attrs.paymentMethodData.slip.date}" pattern="#{sessionController.applicationPreference.longDateFormat}" id="date">                            
                         <p:ajax process="@this" ></p:ajax>
                     </p:calendar>
                     <p:watermark value="Date" for="date"/>
