--- a/src/main/webapp/inward/inward_edit_bht.xhtml
+++ b/src/main/webapp/inward/inward_edit_bht.xhtml
@@ -16,15 +16,22 @@
     <ui:define name="content">
         <h:panelGroup id="panSearch2">
             <h:form  >
-                <p:panel header="Edit BHT Details" rendered="#{bhtEditController.current.bhtNo eq null}">                   
-                    <div class="row" >                       
-                        <div class="col-2 d-flex align-items-center my-1" >
+                <h:panelGroup  class="row" rendered="#{bhtEditController.current.bhtNo eq null}"> 
+                <div class="col-12">
+                    <h:panelGroup>
+                        <p:panel >
+                            <f:facet name="header">
+                                <h:outputText styleClass="fa-solid fa-address-card fa-lg" />
+                                <p:outputLabel value="Edit Admission Details" class="m-2"/>
+                            </f:facet>
+                            <h:outputLabel value="Type Patient Name or BHT : "/>
+                            
                             <p:autoComplete converter="dis" widgetVar="aPt" id="acPt" forceSelection="true" 
                                             value="#{bhtEditController.current}"
                                             completeMethod="#{bhtEditController.completePatient}" 
                                             var="myItem" itemValue="#{myItem}" 
-                                            itemLabel="#{myItem.bhtNo}" disabled="#{bhtEditController.current.bhtNo ne null}"
-                                            class="w-100">
+                                            itemLabel="#{myItem.bhtNo}" 
+                                            class="mx-2" size="30">
                                 <p:column>
                                     <h:outputLabel value="#{myItem.bhtNo}"/>
                                 </p:column>
@@ -33,13 +40,23 @@
                                 </p:column>
                                 <p:ajax process="@this"></p:ajax>
                             </p:autoComplete> 
-                        </div>
-                        <div class="col-5">
-                            <p:commandButton ajax="false" value="Display Details" action="#{bhtEditController.displayDetails}" class="m-1"/>
 
-                        </div>
-                    </div>
-                </p:panel>
+                            <p:commandButton
+                                id="btnSelect"
+                                ajax="false"
+                                value="Select"
+                                action="#{bhtEditController.displayDetails}"
+                                />
+
+                        </p:panel>
+
+
+                    </h:panelGroup>
+
+                </div>
+
+            </h:panelGroup>
+                
 
                 <h:panelGroup  rendered="#{bhtEditController.current.bhtNo ne null}"> 
 
