--- a/src/main/webapp/inward/inward_timed_service_consume.xhtml
+++ b/src/main/webapp/inward/inward_timed_service_consume.xhtml
@@ -26,7 +26,7 @@
                                 completeMethod="#{admissionController.completePatient}" 
                                 var="myItem" itemValue="#{myItem}" 
                                 itemLabel="#{myItem.bhtNo}" 
-                                size="40" class="mb-2 mx-2">
+                                size="40" required="true" class="m-2" requiredMessage="Please enter patient details">
                                 
                                 <p:column>
                                     #{myItem.bhtNo}
