--- a/src/main/webapp/inward/inward_bill_outside_charge.xhtml
+++ b/src/main/webapp/inward/inward_bill_outside_charge.xhtml
@@ -15,7 +15,7 @@
                 <p:panel>
                     <f:facet name="header">
                         <h:outputText styleClass="fa-solid fa-address-card fa-lg"/> <!-- FontAwesome Icon -->
-                        <p:outputLabel value="Patient Details" class="m-2"/>
+                        <p:outputLabel value="Add Outside Charge" class="m-2"/>
                     </f:facet>
 
                     <h:panelGroup class="row" rendered="#{inwardAdditionalChargeController.current.patientEncounter eq null}"> 
@@ -24,6 +24,7 @@
                                 <h:outputLabel value="Type Patient Name or BHT : " class="m-1"/>
 
                                 <p:autoComplete  widgetVar="aPt" id="acPt" forceSelection="true" 
+                                                 required="true" requiredMessage="Please select a patient"
                                                  value="#{inwardAdditionalChargeController.current.patientEncounter}"
                                                  completeMethod="#{admissionController.completePatient}" 
                                                  var="myItem" itemValue="#{myItem}" 
